contrib/k8s/authd-worker-service.yaml
apiVersion: v1beta3
kind: Service
metadata:
  labels:
    app: dex
    role: worker
  name: dex-worker
spec:
  ports:
    - port: 5556
  selector:
    app: dex
    role: worker
