contrib/k8s/dex-overlord-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dex
    role: overlord
  name: dex-overlord
spec:
  ports:
    - port: 5557
  selector:
    app: dex
    role: overlord
