contrib/k8s/dex-overlord.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: dex
    role: overlord
  name: dex-overlord
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dex
        role: overlord
    spec:
      containers:
          - image: quay.io/coreos/dex
            name: dex-overlord
            command:
              - "sh"
              - "-c"
              - "/opt/dex/bin/dex-overlord --key-secrets=${DEX_SECRET}"
            ports:
            - containerPort: 5557
              name: overlord-port
            livenessProbe:
              httpGet:
                path: /health
                port: 5557
              initialDelaySeconds: 16
              timeoutSeconds: 1
            volumeMounts:
              - name: connectors
                mountPath: /etc/dex-connectors
              # In production, you will likely want to include your own trusted
              # /etc/ca-certificates and /etc/ssl in your container.
              - name: ca
                mountPath: /etc/ca-certificates
                readOnly: true
              - name: ssl
                mountPath: /etc/ssl
                readOnly: true
      volumes:
        - name: connectors
          configMap:
            name: dex-connectors
        - name: ca
          hostPath:
            path: /etc/ca-certificates
        - name: ssl
          hostPath:
            path: /etc/ssl
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dex
    role: overlord
  name: dex-overlord
spec:
  ports:
    - port: 5557
  selector:
    app: dex
    role: overlord
