contrib/k8s/dex-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dex
    role: worker
  name: dex-worker
spec:
  type: "NodePort"
  ports:
    - name: "worker"
      port: 5556
      nodePort: 30556

  selector:
    app: dex
    role: worker
