contrib/k8s/postgres-service.yaml
apiVersion: v1beta3
kind: Service
metadata:
  labels:
    app: postgres
  name: auth-postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
