contrib/k8s/dex-worker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: dex
    role: worker
  name: dex-worker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dex
        role: worker
    spec:
      containers:
          - image: quay.io/coreos/dex
            name: dex-worker
            command:
              - "sh"
              - "-c"
              - "/opt/dex/bin/dex-worker --key-secrets=$(cat /etc/dex/key-secrets)"
            ports:
            - containerPort: 5556
              name: worker-port
            readinessProbe:
              httpGet:
                path: /health
                port: 5556
              initialDelaySeconds: 5
              timeoutSeconds: 1
              periodSeconds: 5
            livenessProbe:
              httpGet:
                path: /health
                port: 5556
              initialDelaySeconds: 15
              timeoutSeconds: 1
            volumeMounts:
              - name: dex
                mountPath: "/etc/dex"
                readOnly: true
      volumes:
        - name: dex
          secret:
            secretName: "dex"
---
apiVersion: v1
kind: Service
metadata:
  name: dex-worker
spec:
  ports:
    - name: worker
      port: 5556
  selector:
    app: dex
    role: worker
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dex-worker
spec:
  # Uncomment this section to enable tls, after creating a [tls
  # secret](http://kubernetes.io/docs/user-guide/ingress/#tls) with the
  # appropriate name.
  # tls:
  # - secretName: dex.test.tls
  #   hosts:
  #   - dex.test
  rules:
  - host: dex.test
    http:
      paths:
      - path: /
        backend:
          serviceName: dex-worker
          servicePort: 5556
